--- a/_sass/_bio-list.scss
+++ b/_sass/_bio-list.scss
@@ -9,7 +9,7 @@ dd {
     grid-template-columns: 100px auto;
     grid-gap: 3rem;
     list-style: none;
-    margin: 2rem 0;
+    margin: 0 0 2rem;
     padding: 0;
 }
 .bio-list img {
