--- a/_sass/_bio-list.scss
+++ b/_sass/_bio-list.scss
@@ -1,40 +1,40 @@
 dl,
 dt,
 dd {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .bio-list {
-    display: grid;
-    grid-template-columns: 100px auto;
-    grid-gap: 3rem;
-    list-style: none;
-    margin: 0 0 2rem;
-    padding: 0;
+  display: grid;
+  grid-template-columns: 100px auto;
+  grid-gap: 2rem 3rem;
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
 }
 .bio-list img {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 
-    object-fit: scale-down;
-    border-radius: 50%;
-    margin: 1rem;
+  object-fit: scale-down;
+  border-radius: 50%;
+  margin: 1rem;
 }
 @media only screen and (max-width: 600px) {
-    .bio-list {
-        display: block;
-    }
-    .bio-list dt {
-        float: left;
-        shape-outside: circle();
-    }
+  .bio-list {
+    display: block;
+  }
+  .bio-list dt {
+    float: left;
+    shape-outside: circle();
+  }
 
-    .bio-list dd::after {
-        clear: both;
-        content: "";
-    }
+  .bio-list dd::after {
+    clear: both;
+    content: "";
+  }
 
-    .bio-list dd {
-        margin-bottom: 2rem;
-    }
+  .bio-list dd {
+    margin-bottom: 2rem;
+  }
 }
