--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,4 +1,5 @@
-<dt class="bio__img-container">
+<dt class="bio__img-container" 
+    id="{{ person.name | downcase | replace: " ", "-" }}">
   <img
     src="{{ person.photo }}"
     class="bio__img"
@@ -6,7 +7,5 @@
   />
 </dt>
 <dd class="bio__body">
-  {{ person.description | markdownify | remove: "
-  <p>" | remove: "</p>
-  " }}
+  {{ person.description | markdownify | remove: "<p>" | remove: "</p>" }}
 </dd>
