--- a/_sass/components/_bio-list.scss
+++ b/_sass/components/_bio-list.scss
@@ -4,6 +4,7 @@ dd {
   margin: 0;
   padding: 0;
 }
+
 .bio-list {
   display: grid;
   grid-template-columns: 100px auto;
@@ -46,8 +47,8 @@ dd {
 
 .bio__img-container {
   margin: 0.3rem;
-  width: 20%;
-  max-width: 20%;
+  // width: 25%;
+  // max-width: 25%;
 }
 .short {
   display: grid;
@@ -73,6 +74,7 @@ dd {
   .bio__img-container {
     float: left;
     shape-outside: circle();
+    margin-right: 1rem;
   }
 
   .bio__img-container {
