--- a/_sass/components/_bio-list.scss
+++ b/_sass/components/_bio-list.scss
@@ -19,6 +19,20 @@ dd {
   margin-bottom: 1rem;
 }
 
+.bio-list-summer {
+  display: grid;
+  grid-template-columns: 100px auto;
+  grid-gap: 2rem 3rem;
+  list-style: none;
+  // margin: 1rem 0;
+  padding: 0 1rem;
+  // max-width: 60rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .bio-list-collab {
   display: grid;
   // flex-wrap: wrap;
