--- a/_sass/components/_bio-list.scss
+++ b/_sass/components/_bio-list.scss
@@ -58,7 +58,7 @@ dd {
   max-height: 200px;
   aspect-ratio: 1;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 0.25rem;
 }
 
 .bio__img {
